完成图片处理相关。

--- a/app/src/main/res/layout/activity_drawerlayout.xml
+++ b/app/src/main/res/layout/activity_drawerlayout.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
-            app:navigationIcon="@drawable/ic_menu"
+            app:navigationIcon="@mipmap/ic_menu"
             android:fitsSystemWindows="true"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
