--- a/app/src/main/res/drawable/back_selector.xml
+++ b/app/src/main/res/drawable/back_selector.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/back_select" android:state_pressed="true" />
-    <item android:drawable="@drawable/back_select" android:state_checked="true" />
-    <item android:drawable="@drawable/back_default" />
+    <item android:drawable="@mipmap/back_select" android:state_pressed="true" />
+    <item android:drawable="@mipmap/back_select" android:state_checked="true" />
+    <item android:drawable="@mipmap/back_default" />
 
 </selector>
