--- a/app/src/main/res/layout/head_layout.xml
+++ b/app/src/main/res/layout/head_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="192dp"
-    android:background="@drawable/banner2"
+    android:background="@mipmap/banner2"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
