--- a/app/src/main/res/layout/okhttp_item.xml
+++ b/app/src/main/res/layout/okhttp_item.xml
@@ -12,7 +12,7 @@
         android:layout_centerVertical="true"
         android:layout_margin="5dp"
         android:scaleType="fitXY"
-        android:src="@drawable/ic_launcher" />
+        android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
         android:layout_width="match_parent"
