--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -4,29 +4,29 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_dashboard"
+            android:icon="@mipmap/ic_dashboard"
             android:title="Home"/>
         <item
             android:id="@+id/nav_messages"
-            android:icon="@drawable/ic_event"
+            android:icon="@mipmap/ic_event"
             android:title="Messages"/>
         <item
             android:id="@+id/nav_friends"
-            android:icon="@drawable/ic_headset"
+            android:icon="@mipmap/ic_headset"
             android:title="Friends"/>
         <item
             android:id="@+id/nav_discussion"
-            android:icon="@drawable/ic_forum"
+            android:icon="@mipmap/ic_forum"
             android:title="Discussion"/>
     </group>
 
     <item android:title="Sub items">
         <menu>
             <item
-                android:icon="@drawable/ic_dashboard"
+                android:icon="@mipmap/ic_dashboard"
                 android:title="Sub item 1"/>
             <item
-                android:icon="@drawable/ic_forum"
+                android:icon="@mipmap/ic_forum"
                 android:title="Sub item 2"/>
         </menu>
     </item>
